Task-58917: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for likers (#451)

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
@@ -325,6 +325,8 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
         width: 30px;
         position: relative;
         height: 30px;
+        background-color: @baseColorLight;
+        border-radius: 50%;
         &:before {
           content: "";
           width: 100%;
